# cpp-raylib-Breakout

./: CMakeLists.txt  CMakePresets.json
src/: ball.cpp  ball.hpp  block.cpp  block.hpp  colors.hpp  game.cpp  game.hpp  main.cpp  paddle.cpp  paddle.hpp
